# csv_processor

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
csv_processor/: main.py  models.py  utils.py
csv_processor/commands/: aggregate.py  filter.py
tests/: test_aggregate.py  test_filter.py
