[project]
name = "csv_processor"
version = "0.1.0"
description = "Консольный инструмент для фильтрации и агрегации CSV-файлов"
authors = [{ name = "Нурболот", email = "your.email@example.com" }]
license = "MIT"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "black"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=csv_processor --cov-report=term --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv"
]
